--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: go
 install:
-- go get -v github.com/caimiao0714/me
+- go get -v github.com/spf13/hugo
 script:
 - hugo version
 - make build
