--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: go
 install:
 - go get -v github.com/spf13/hugo
+- pip install --user awscli
 script:
 - hugo version
-- make build
+- make deploy
 branches:
  only:
  - master
