--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
-language: go
-install:
-- go get -v github.com/spf13/hugo
-- pip install --user awscli
-script:
-- hugo version
-- make deploy
-branches:
- only:
- - master
+# language: go
+# install:
+# - go get -v github.com/spf13/hugo
+# - pip install --user awscli
+# script:
+# - hugo version
+# - make deploy
+# branches:
+# only:
+# - master
